Another case change

--- a/src/main/webapp/app/entities/image/image-detail.component.html
+++ b/src/main/webapp/app/entities/image/image-detail.component.html
@@ -1,18 +1,18 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <div *ngIf="image">
-            <h2><span jhiTranslate="tableofprizesApp.image.detail.title">Image</span> {{ image.id }}</h2>
+            <h2><span jhiTranslate="TableOfPrizesApp.image.detail.title">Image</span> {{ image.id }}</h2>
 
             <hr>
 
             <jhi-alert-error></jhi-alert-error>
 
             <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="tableofprizesApp.image.name">Name</span></dt>
+                <dt><span jhiTranslate="TableOfPrizesApp.image.name">Name</span></dt>
                 <dd>
                     <span>{{ image.name }}</span>
                 </dd>
-                <dt><span jhiTranslate="tableofprizesApp.image.url">Url</span></dt>
+                <dt><span jhiTranslate="TableOfPrizesApp.image.url">Url</span></dt>
                 <dd>
                     <span>{{ image.url }}</span>
                 </dd>
