--- a/src/main/webapp/app/entities/image/image-update.component.html
+++ b/src/main/webapp/app/entities/image/image-update.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-            <h2 id="jhi-image-heading" jhiTranslate="tableofprizesApp.image.home.createOrEditLabel">Create or edit a Image</h2>
+            <h2 id="jhi-image-heading" jhiTranslate="TableOfPrizesApp.image.home.createOrEditLabel">Create or edit a Image</h2>
 
             <div>
                 <jhi-alert-error></jhi-alert-error>
@@ -12,13 +12,13 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="tableofprizesApp.image.name" for="field_name">Name</label>
+                    <label class="form-control-label" jhiTranslate="TableOfPrizesApp.image.name" for="field_name">Name</label>
                     <input type="text" class="form-control" name="name" id="field_name"
                            formControlName="name"/>
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="tableofprizesApp.image.url" for="field_url">Url</label>
+                    <label class="form-control-label" jhiTranslate="TableOfPrizesApp.image.url" for="field_url">Url</label>
                     <input type="text" class="form-control" name="url" id="field_url"
                            formControlName="url"/>
                 </div>
