--- a/src/main/webapp/app/entities/image/image-update.component.html
+++ b/src/main/webapp/app/entities/image/image-update.component.html
@@ -22,6 +22,12 @@
                     <input type="text" class="form-control" name="url" id="field_url"
                            formControlName="url"/>
                 </div>
+
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="TableOfPrizesApp.image.user" for="field_user">User</label>
+                    <input type="hidden" class="form-control" name="user" id="field_user"
+                           formControlName="user"/>
+                </div>
             </div>
 
             <div>
