--- a/src/main/webapp/app/entities/image/image-update.component.html
+++ b/src/main/webapp/app/entities/image/image-update.component.html
@@ -24,8 +24,8 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="hidden" class="form-control" name="user" id="field_user"
-                           formControlName="user"/>
+                    <input type="hidden" class="form-control" name="userId" id="field_userId"
+                           formControlName="userId"/>
                 </div>
             </div>
 
