--- a/src/main/webapp/app/entities/image/image.component.html
+++ b/src/main/webapp/app/entities/image/image.component.html
@@ -26,6 +26,7 @@
                     <th scope="col"  jhiSortBy="name"><span jhiTranslate="TableOfPrizesApp.image.name">Name</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"  jhiSortBy="url"><span jhiTranslate="TableOfPrizesApp.image.url">Url</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"></th>
+                    <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
@@ -33,6 +34,7 @@
                     <td><a [routerLink]="['/image', image.id, 'view']">{{ image.id }}</a></td>
                     <td>{{ image.name }}</td>
                     <td>{{ image.url }}</td>
+                    <td><img class="thumbnail" [src]="image.url"></td>
                     <td class="text-right">
                         <div class="btn-group">
                             <button type="submit"
