--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -163,4 +163,10 @@ ui bootstrap tweaks
   white-space: nowrap;
 }
 
+.thumbnail {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
 /* jhipster-needle-scss-add-main JHipster will add new css style */
