--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-    <div class="col-md-3">
-        <span class="hipster img-fluid rounded"></span>
+    <div class="col-md-4">
+        <span class="tableofprizes img-fluid rounded"></span>
     </div>
 
-    <div class="col-md-9">
+    <div class="col-md-8">
         <h1 class="display-4" jhiTranslate="home.title">title</h1>
 
         <p class="lead" jhiTranslate="home.message">message</p>
