Clarify where custom code starts

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -168,10 +168,14 @@ ui bootstrap tweaks
   white-space: nowrap;
 }
 
+/* ==========================================================================
+custom styles section
+========================================================================== */
 .thumbnail {
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
   width: 150px;
 }
+
 /* jhipster-needle-scss-add-main JHipster will add new css style */
