--- a/src/main/webapp/app/entities/image/image-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/image/image-delete-dialog.component.html
@@ -9,7 +9,7 @@
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
 
-        <p id="jhi-delete-image-heading" jhiTranslate="TableOfPrizesApp.image.delete.question" [translateValues]="{ id: image.id }">Are you sure you want to delete this Image?</p>
+        <p id="jhi-delete-image-heading" jhiTranslate="TableOfPrizesApp.image.delete.question" [translateValues]="{ param: image.name }">Are you sure you want to delete this Image?</p>
     </div>
 
     <div class="modal-footer">
