--- a/src/main/webapp/app/entities/image/image-detail.component.html
+++ b/src/main/webapp/app/entities/image/image-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <div *ngIf="image">
-            <h2><span jhiTranslate="TableOfPrizesApp.image.detail.title">Image</span> {{ image.id }}</h2>
+            <h2><span jhiTranslate="TableOfPrizesApp.image.detail.title">Image</span> {{ image.name }}</h2>
 
             <hr>
 
