Use name's instead of id's for tables of prizes

--- a/src/main/webapp/app/entities/table-of-prizes/table-of-prizes-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/table-of-prizes/table-of-prizes-delete-dialog.component.html
@@ -9,7 +9,7 @@
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
 
-        <p id="jhi-delete-tableOfPrizes-heading" jhiTranslate="TableOfPrizesApp.tableOfPrizes.delete.question" [translateValues]="{ id: tableOfPrizes.id }">Are you sure you want to delete this Table Of Prizes?</p>
+        <p id="jhi-delete-tableOfPrizes-heading" jhiTranslate="TableOfPrizesApp.tableOfPrizes.delete.question" [translateValues]="{ param: tableOfPrizes.name }">Are you sure you want to delete this Table Of Prizes?</p>
     </div>
 
     <div class="modal-footer">
