--- a/src/main/webapp/app/entities/table-of-prizes/table-of-prizes.component.html
+++ b/src/main/webapp/app/entities/table-of-prizes/table-of-prizes.component.html
@@ -22,15 +22,13 @@
         <table class="table table-striped" aria-describedby="page-heading">
             <thead>
                 <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="loadPage.bind(this)">
-                    <th scope="col"  jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"  jhiSortBy="name"><span jhiTranslate="TableOfPrizesApp.tableOfPrizes.name">Name</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let tableOfPrizes of tableOfPrizes ;trackBy: trackId">
-                    <td><a [routerLink]="['/table-of-prizes', tableOfPrizes.id, 'view']">{{ tableOfPrizes.id }}</a></td>
-                    <td>{{ tableOfPrizes.name }}</td>
+                    <td><a [routerLink]="['/table-of-prizes', tableOfPrizes.id, 'view']">{{ tableOfPrizes.name }}</a></td>
                     <td class="text-right">
                         <div class="btn-group">
                             <button type="submit"
