--- a/src/main/webapp/app/entities/table-of-prizes/table-of-prizes-detail.component.html
+++ b/src/main/webapp/app/entities/table-of-prizes/table-of-prizes-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <div *ngIf="tableOfPrizes">
-            <h2><span jhiTranslate="TableOfPrizesApp.tableOfPrizes.detail.title">Table Of Prizes</span> {{ tableOfPrizes.id }}</h2>
+            <h2><span jhiTranslate="TableOfPrizesApp.tableOfPrizes.detail.title">Table Of Prizes</span> {{ tableOfPrizes.name }}</h2>
 
             <hr>
 
