--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -40,7 +40,7 @@
                 </div>
                 <div>
                     <span jhiTranslate="home.logged.goto">Go to </span>
-                    <a jhiTranslate="global.menu.entities.tableOfPrizes" routerLink="/image">Tables of Prizes</a>.
+                    <a jhiTranslate="global.menu.entities.tableOfPrizes" routerLink="/table-of-prizes">Tables of Prizes</a>.
                 </div>
             </div>
         </div>
