--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -19,11 +19,11 @@
                     <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a>
                     <span jhiTranslate="global.messages.info.authenticated.suffix"> to continue.<br/></span>
                 </div>
-                <div *ngIf="tableOfPrizes">
+                <div *ngIf="tablesOfPrizes">
                     <span jhiTranslate="home.notlogged.option3">You can also view a few recent tables of prizes:</span>
                     <ul>
-                        <li *ngFor="let tableOfPrize of tableOfPrizes">
-                            <div>{{ tableOfPrize.name }}</div>
+                        <li *ngFor="let tableOfPrizes of tablesOfPrizes">
+                            <div><a [routerLink]="['/table-of-prizes', tableOfPrizes.id, 'public']">{{ tableOfPrizes.name }}</a></div>
                         </li>
                     </ul>
                 </div>
