Pass data on route, rename component from 'public' to 'preview'

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -23,7 +23,7 @@
                     <span jhiTranslate="home.notlogged.option3">You can also view a few recent tables of prizes:</span>
                     <ul>
                         <li *ngFor="let tableOfPrizes of tablesOfPrizes">
-                            <div><a [routerLink]="['/table-of-prizes', tableOfPrizes.id, 'public']">{{ tableOfPrizes.name }}</a></div>
+                            <div><a [routerLink]="['/table-of-prizes/preview']" [state]="{ tableOfPrizes: tableOfPrizes }">{{ tableOfPrizes.name }}</a></div>
                         </li>
                     </ul>
                 </div>
